🐛 Fix layout shift problem + remove obsolete code

--- a/styles/Forecast.module.css
+++ b/styles/Forecast.module.css
@@ -4,11 +4,3 @@
   transition: opacity .4s ease-in;
   padding-bottom: 3rem;
 }
-
-.theme-light {
-  color: black;
-}
-
-.theme-dark {
-  color: white;
-}
